🤖 Added JVM arg/flag config during setup
- Has 3 options: calculated, custom, or skip
- Calculated will use current Java version, RAM selection, and hardware setup of server to determine optimal flags